# yuft

./: .env.sample  .gitignore  README.md  manage.py  pyproject.toml
templates/: base_generic.html  home.html
templates/labeling/: create.html
templates/labels/: create.html  detail.html  list.html
yuft/: asgi.py  settings.py  urls.py  wsgi.py
yuft/labeling/: apps.py  models.py
yuft/labels/: apps.py  crypto.py  forms.py  models.py  serializers.py  urls.py  utils.py  views.py
yuft/labels/migrations/: 0001_initial.py  0002_alter_label_signature.py
