[tool.poetry]
name = "yuft"
version = "0.1.0"
description = ""
authors = ["Ehsan <barkhordar.me@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
Django = "^4.0.6"
django-environ = "^0.9.0"
psycopg2 = "^2.9.3"
pycryptodome = "^3.15.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
